[package]
name = "mdbook-nop-preprocessor"
version = "0.1.0"
authors = ["matthewacon <matthewjbarichello@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4.10"
clap = "2.24"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
env_logger = "0.5"
lazy_static = "1.0"
